# structured-wikivoyage-exports

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  package-lock.json  package.json  pyproject.toml  split-dump.ts  transform-documents.py  types.ts
.github/workflows/: build-image.yaml  publish-types.yaml  test-parser.yaml
docs/: README.md  bunny_storage.env  filesystem.env  types.md
docs/example/: output.json
output_handlers/: __init__.py  base_handler.py  bunny_storage.py  filesystem.py  filesystm_handler.py  s3.py
sketching/: parsing.ipynb
src/: main.py
src/output_handlers/: __init__.py  base_handler.py  bunny_storage.py  csv.py  filesystem.py  s3.py
src/transformers/: __init__.py  fetch_mappings.py  parser.py  wiki_dump_handler.py
tests/: test_parser_json_snippets.py
tests/fixtures/: boston_input.txt  boston_output.json
transformers/: wiki_dump_handler.py
types/: .npmrc  LICENSE  README.md  package.json  tsconfig.json
